--- a/catalog.html
+++ b/catalog.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Каталог</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap');
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -57,7 +56,7 @@
            <li><a href="#">Инструменты</a></li>
            <li><a href="#">Перфораторы</a></li>
        </ul>
-       <h2 class="title" class="catalog-header">Перфораторы</h2>
+       <h2 class="catalog-header title">Перфораторы</h2>
        <section class="filter">
            <h3 class="title">Фильтр:</h3>
            <form class="filter" method="get" action="https://echo.htmlacademy.ru">
@@ -104,7 +103,7 @@
        </section> <!--/.filter-->
 
        <section class="catalog">
-           <h3 class="visually-hidden title">Список инструментов</h3>
+           <h3 class="visually-hidden .title">Список инструментов</h3>
            <ul class="catalog-list reset-list">
                <li class="catalog-item new">
                    <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
@@ -285,7 +284,7 @@
    </footer>
 
    <section class="modal modal-cart">
-       <h2 class="visually-hidden title">Добавление товара в корзину</h2>
+       <h2 class="visually-hidden .title">Добавление товара в корзину</h2>
        <p>Товар добавлен в корзину!</p>
        <a href="#">Оформить заказ</a>
        <button class="btn btn-continue" type="button">Продолжить покупки</button>
