--- a/catalog.html
+++ b/catalog.html
@@ -123,109 +123,109 @@
            <a href="#"><span class="visually-hidden">По возрастанию</span></a>
            <a href="#"><span class="visually-hidden">По убыванию</span></a>
          </section>
-         <ul class="catalog-list reset-list">
-           <li class="catalog-item new">
-             <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+         <ul class="card-list reset-list">
+           <li class="card-item new">
+             <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
              <a href="#">
                <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
-             <div class="catalog-item-action">
+             <div class="card-item-action">
                <a class="btn btn-buy" href="#">Купить</a>
                <a class="btn btn-bookmark" href="#">В закладки</a>
              </div>
              <del class="discount">22500 Р.</del>
              <p class="price">15500 Р.</p>
            </li>
-           <li class="catalog-item new">
-             <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+           <li class="card-item new">
+             <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
              <a href="#">
                <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
-             <div class="catalog-item-action">
+             <div class="card-item-action">
                <a class="btn btn-buy" href="#">Купить</a>
                <a class="btn btn-bookmark" href="#">В закладки</a>
              </div>
              <del class="discount">22500 Р.</del>
              <p class="price">15500 Р.</p>
            </li>
-           <li class="catalog-item new">
-             <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+           <li class="card-item new">
+             <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
              <a href="#">
                <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
-             <div class="catalog-item-action">
+             <div class="card-item-action">
                <a class="btn btn-buy" href="#">Купить</a>
                <a class="btn btn-bookmark" href="#">В закладки</a>
              </div>
              <del class="discount">22500 Р.</del>
              <p class="price">15500 Р.</p>
            </li>
-           <li class="catalog-item new">
-             <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+           <li class="card-item new">
+             <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
              <a href="#">
                <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
-             <div class="catalog-item-action">
+             <div class="card-item-action">
                <a class="btn btn-buy" href="#">Купить</a>
                <a class="btn btn-bookmark" href="#">В закладки</a>
              </div>
              <del class="discount">22500 Р.</del>
              <p class="price">15500 Р.</p>
            </li>
-           <li class="catalog-item new">
-             <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+           <li class="card-item new">
+             <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
              <a href="#">
                <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
-             <div class="catalog-item-action">
+             <div class="card-item-action">
                <a class="btn btn-buy" href="#">Купить</a>
                <a class="btn btn-bookmark" href="#">В закладки</a>
              </div>
              <del class="discount">22500 Р.</del>
              <p class="price">15500 Р.</p>
            </li>
-           <li class="catalog-item new">
-             <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+           <li class="card-item new">
+             <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
              <a href="#">
                <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
-             <div class="catalog-item-action">
+             <div class="card-item-action">
                <a class="btn btn-buy" href="#">Купить</a>
                <a class="btn btn-bookmark" href="#">В закладки</a>
              </div>
              <del class="discount">22500 Р.</del>
              <p class="price">15500 Р.</p>
            </li>
-           <li class="catalog-item new">
-             <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+           <li class="card-item new">
+             <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
              <a href="#">
                <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
-             <div class="catalog-item-action">
+             <div class="card-item-action">
                <a class="btn btn-buy" href="#">Купить</a>
                <a class="btn btn-bookmark" href="#">В закладки</a>
              </div>
              <del class="discount">22500 Р.</del>
              <p class="price">15500 Р.</p>
            </li>
-           <li class="catalog-item new">
-             <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+           <li class="card-item new">
+             <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
              <a href="#">
                <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
-             <div class="catalog-item-action">
+             <div class="card-item-action">
                <a class="btn btn-buy" href="#">Купить</a>
                <a class="btn btn-bookmark" href="#">В закладки</a>
              </div>
              <del class="discount">22500 Р.</del>
              <p class="price">15500 Р.</p>
            </li>
-           <li class="catalog-item new">
-             <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+           <li class="card-item new">
+             <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
              <a href="#">
                <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
-             <div class="catalog-item-action">
+             <div class="card-item-action">
                <a class="btn btn-buy" href="#">Купить</a>
                <a class="btn btn-bookmark" href="#">В закладки</a>
              </div>
