--- a/index.html
+++ b/index.html
@@ -49,121 +49,155 @@
    </header>
 
    <main>
-     <section class="products container"><!--
+     <section class="products container">
        <h2 class="visually-hidden title">Услуги</h2>
-       <div class="services-item new">
+       <div class="product-item product-material new">
          <h3 class="title">Материалы</h3>
-         <a class="btn" href="#">На любой вкус</a>
+         <a class="btn btn-product" href="#">На любой вкус</a>
        </div>
-       <div class="services-item">
+       <div class="product-item product-tool">
          <h3 class="title">Инструмент</h3>
-         <a class="btn" href="#">На все случаи</a>
+         <a class="btn btn-product" href="#">На все случаи</a>
        </div>
-       <div class="services-item">
+       <div class="product-item product-technique">
          <h3 class="title">Техника</h3>
-         <a class="btn" href="#">Для стройки</a>
+         <a class="btn btn-product" href="#">Для стройки</a>
        </div>
 
-       <div class="services-slider">
+       <div class="product-slider">
          <a class="slider-btn  slider-btn-prev" href="#">Назад</a>
          <a class="slider-btn  slider-btn-next" href="#">Вперед</a>
          <div class="slider-item">
            <h3 class="title">Дрели</h3>
            <p>Соседям на радость!</p>
-           <img src="img/servSlidImg_1.jpg" width="620px" height="266px" alt="Мужик сверлющий стену к соседям">
            <a class="btn btn-basic" href="#">Открыть каталог</a>
          </div>
        </div>
 
-       <div class="services-item">
+       <div class="product-item product-discount">
          <h3 class="title">Скидки 50%</h3>
-         <a class="btn" href="#">Для стройки</a>
+         <a class="btn  btn-product" href="#">На 350 товаров</a>
        </div>
-       <div class="services-item">
+       <div class="product-item product-delivery">
          <h3 class="title">Доставка</h3>
-         <a class="btn" href="#">Бесплатно</a>
-       </div>-->
+         <a class="btn  btn-product" href="#">Бесплатно</a>
+       </div>
 
    </section>
 
    <section class="popular-goods container">
-     <!--<div class="popular-goods-header">
-       <h2 class="title">Популярный товары</h2>
-       <a href="catalog.html">Все популярные товары</a>
+     <div class="popular-goods-header">
+       <h2 class="popular-goods-title title">Популярный товары:</h2>
+       <a class="btn btn-basic" href="catalog.html">Все популярные товары</a>
      </div>
-     <ul class="popular-list">
-       <li class="popular-item new">
-         <h3><a href="#">Перфоратор BOSCH BFG 9000</a></h3>
+     <ul class="card-list reset-list">
+       <li class="card-item new">
+         <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
          <a href="#">
-           <img src="img/perf_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+           <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
-         <div class="popular-item-action">
+         <div class="card-item-action">
            <a class="btn btn-buy" href="#">Купить</a>
            <a class="btn btn-bookmark" href="#">В закладки</a>
          </div>
          <del class="discount">22500 Р.</del>
          <p class="price">15500 Р.</p>
        </li>
-       <li class="popular-item new">
-         <h3><a href="#">Перфоратор BOSCH BFG 9000</a></h3>
+       <li class="card-item new">
+         <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
          <a href="#">
-           <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+           <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
-         <div class="popular-item-action">
+         <div class="card-item-action">
            <a class="btn btn-buy" href="#">Купить</a>
            <a class="btn btn-bookmark" href="#">В закладки</a>
          </div>
          <del class="discount">22500 Р.</del>
          <p class="price">15500 Р.</p>
        </li>
-       <li class="popular-item new">
-         <h3><a href="#">Перфоратор BOSCH BFG 9000</a></h3>
+       <li class="card-item new">
+         <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
          <a href="#">
-           <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+           <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
-         <div class="popular-item-action">
+         <div class="card-item-action">
            <a class="btn btn-buy" href="#">Купить</a>
            <a class="btn btn-bookmark" href="#">В закладки</a>
          </div>
          <del class="discount">22500 Р.</del>
          <p class="price">15500 Р.</p>
        </li>
-       <li class="popular-item new">
-         <h3><a href="#">Перфоратор BOSCH BFG 9000</a></h3>
+       <li class="card-item new">
+         <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
          <a href="#">
-           <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+           <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
-         <div class="popular-item-action">
+         <div class="card-item-action">
            <a class="btn btn-buy" href="#">Купить</a>
            <a class="btn btn-bookmark" href="#">В закладки</a>
          </div>
+         <del class="discount">22500 Р.</del>
          <p class="price">15500 Р.</p>
        </li>
+     </ul>
 
-     </ul>-->
    </section>
 
    <section class="brand container">
-     <!--<div class="brand-header">
-       <h2 class="title">Популярные производители:</h2>
-       <a href="">Все производители</a>
+     <div class="brand-header">
+       <h2 class="brand-title title">Популярные производители:</h2>
+       <a class="btn btn-basic" href="#">Все производители</a>
      </div>
-     <ul class="brand-list reset-list">
-       <li class="brand-item"><a href=""><img src="img/brand-bosch.jpg" alt="Bosch"></a></li>
-       <li class="brand-item"><a href=""><img src="img/brand-makita.jpg" alt="makita"></a></li>
-       <li class="brand-item"><a href=""><img src="img/brand-dewalt.jpg" alt="dewalt"></a></li>
-       <li class="brand-item"><a href=""><img src="img/brand-interscol.jpg" alt="интерскол"></a></li>
-       <li class="brand-item"><a href=""><img src="img/brand-hitachi.jpg" alt="hitachi"></a></li>
-       <li class="brand-item"><a href=""><img src="img/brand-lg.jpg" alt="lg"></a></li>
-       <li class="brand-item"><a href=""><img src="img/brand-aeg.jpg" alt="aeg"></a></li>
-       <li class="brand-item"><a href=""><img src="img/brand-metabo.jpg" alt="metabo"></a></li>
-     </ul>-->
+     <div class="brand-list">
+       <a class="brand-item" href=""><img src="img/brand-bosch.jpg" alt="Bosch"></a>
+       <a class="brand-item" href=""><img src="img/brand-makita.jpg" alt="makita"></a>
+       <a class="brand-item" href=""><img src="img/brand-dewalt.jpg" alt="dewalt"></a>
+       <a class="brand-item" href=""><img src="img/brand-interscol.jpg" alt="интерскол"></a>
+       <a class="brand-item" href=""><img src="img/brand-hitachi.jpg" alt="hitachi"></a>
+       <a class="brand-item" href=""><img src="img/brand-lg.jpg" alt="lg"></a>
+       <a class="brand-item" href=""><img src="img/brand-aeg.jpg" alt="aeg"></a>
+       <a class="brand-item" href=""><img src="img/brand-metabo.jpg" alt="metabo"></a>
+     </div>
    </section>
 
    <section class="service">
-      <div class="service-wrapper container">
-       <!--<h2 class="title">Сервисы</h2>
-       <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>-->
+      <div class="service-header container">
+       <h2 class="title">Сервисы</h2>
+       <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+     </div>
+     <div class="index-columns container">
+       <input class="visually-hidden" type="radio" id="s-btn-1" name="service" checked>
+       <input class="visually-hidden" type="radio" id="s-btn-2" name="service">
+       <input class="visually-hidden" type="radio" id="s-btn-3" name="service">
+        <ul class="service-menu reset-list title">
+         <li>
+           <label class="service-menu-item" for="s-btn-1">Доставка</label>
+         </li>
+         <li>
+           <label class="service-menu-item" for="s-btn-2">Гарантия</label>
+         </li>
+         <li>
+           <label class="service-menu-item" for="s-btn-3">Кредит</label>
+         </li>
+       </ul>
+       <div class="service-list">
+         <div class="service-item service-item-1">
+           <h3 class="title">Доставка</h3>
+           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!</p>
+           <p>Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+         </div>
+         <div class="service-item service-item-2">
+           <h3 class="title">Гарантия</h3>
+           <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. </p><!--Вопрос о использовании br-->
+           <p>Дом уж восстановите как-нибудь сами.</p>
+         </div>
+         <div class="service-item service-item-3">
+           <h3 class="title">Кредит</h3>
+           <p>Залезть в долговую яму стало проще! </p>
+           <p>Кредитные консультанты придут вам на помощь.</p>
+           <a class="btn btn-basic" href="#">Отправить заявку</a>
+         </div>
+       </div>
      </div>
 
    </section>
@@ -219,36 +253,38 @@
         </ul>
       </div>
      </div>
-     <div class="footer-bottom container">
-       <p class="footer-copyright">
-         © 2010–2019 Компания «Техномарт»<br>
-         Все права защищены
-       </p>
-      <ul class="social-list reset-list">
-        <li class="social-item">
-          <a class="social-btn social-btn-vk" href="#">
-            <span class="visually-hidden">Вконтакте</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-btn social-btn-fb" href="#">
-            <span class="visually-hidden">Фейсбук</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-btn social-btn-insta" href="#">
-            <span class="visually-hidden">Инстаграм</span>
-          </a>
-        </li>
-      </ul>
-       <p class="feedback">
-         Обратная связь:
-         <a class="footer-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-       </p>
-       <p class="develop">
-         Разработано:
-         <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-       </p>
+     <div class="footer-bottom-wrapper">
+       <div class="footer-bottom container">
+         <p class="footer-copyright">
+           © 2010–2019 Компания «Техномарт»<br>
+           Все права защищены
+         </p>
+        <ul class="social-list reset-list">
+          <li class="social-item">
+            <a class="social-btn social-btn-vk" href="#">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-btn social-btn-fb" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-btn social-btn-insta" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+        </ul>
+         <p class="feedback">
+           Обратная связь:
+           <a class="footer-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+         </p>
+         <p class="develop">
+           Разработано:
+           <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+         </p>
+       </div>
      </div>
    </footer>
 
