--- a/catalog.html
+++ b/catalog.html
@@ -126,7 +126,7 @@
          <ul class="card-list reset-list">
            <li class="card-item new">
              <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
-             <a href="#">
+             <a class="card-item-image" href="#">
                <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
              <div class="card-item-action">
@@ -138,7 +138,7 @@
            </li>
            <li class="card-item new">
              <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
-             <a href="#">
+             <a class="card-item-image" href="#">
                <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
              <div class="card-item-action">
@@ -150,7 +150,7 @@
            </li>
            <li class="card-item new">
              <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
-             <a href="#">
+             <a class="card-item-image" href="#">
                <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
              <div class="card-item-action">
@@ -162,7 +162,7 @@
            </li>
            <li class="card-item new">
              <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
-             <a href="#">
+             <a class="card-item-image" href="#">
                <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
              <div class="card-item-action">
@@ -174,7 +174,7 @@
            </li>
            <li class="card-item new">
              <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
-             <a href="#">
+             <a class="card-item-image" href="#">
                <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
              <div class="card-item-action">
@@ -186,7 +186,7 @@
            </li>
            <li class="card-item new">
              <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
-             <a href="#">
+             <a class="card-item-image" href="#">
                <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
              <div class="card-item-action">
@@ -198,7 +198,7 @@
            </li>
            <li class="card-item new">
              <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
-             <a href="#">
+             <a class="card-item-image" href="#">
                <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
              <div class="card-item-action">
@@ -210,7 +210,7 @@
            </li>
            <li class="card-item new">
              <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
-             <a href="#">
+             <a class="card-item-image" href="#">
                <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
              <div class="card-item-action">
@@ -222,7 +222,7 @@
            </li>
            <li class="card-item new">
              <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
-             <a href="#">
+             <a class="card-item-image" href="#">
                <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
              </a>
              <div class="card-item-action">
