--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
          <a class="header-logo"><img src="img/icon/logo-technomart.svg" width="109" height="19" alt="Логотип магазина ТЕХНОМАРТ"></a>
          <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <label class="visually-hidden" for="header-search">Поиск</label>
-          <input type="search" class="search-input" placeholder="Поиск:" id="header-search">
+          <input type="search" class="search-input" value="Поиск:" id="header-search">
          </form>
          <ul class="header-list reset-list">
-           <li><a href="#">Закладки: <span>0</span></a></li>
-           <li><a href="#">Корзина: <span>0</span></a></li>
-           <li><a class="btn-order" href="#">Оформить заказ</a></li>
+           <li><a class="header-list-item header-list-bookmark" href="#">Закладки: <span>0</span></a></li>
+           <li><a class="header-list-item header-list-cart" href="#">Корзина: <span>0</span></a></li>
+           <li><a class="header-list-item header-list-order" href="#">Оформить заказ</a></li>
          </ul>
        </div>
      </div>
@@ -28,7 +28,7 @@
        <h1 class="header-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
        <address class="header-contacts">
          <a class="header-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a><br>
-         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
        </address>
        <ul class="auth reset-list">
          <li><a class="login-link" href="#">Войти</a></li>
@@ -37,19 +37,19 @@
      </div>
      <nav class="main-navigation">
        <ul class="site-navigation container reset-list">
-         <li class="site-navigation-item"><a href="#">Главная</a></li>
-         <li class="site-navigation-item"><a href="#">Компания</a></li>
-         <li class="site-navigation-item"><a href="catalog.html">Каталог</a></li>
-         <li class="site-navigation-item"><a href="#">Новости</a></li>
-         <li class="site-navigation-item"><a href="#">Спецпредложения</a></li>
-         <li class="site-navigation-item"><a href="#">Доставка</a></li>
-         <li class="site-navigation-item"><a href="#">Контакты</a></li>
+         <li><a class="site-navigation-item" href="#">Главная</a></li>
+         <li><a class="site-navigation-item" href="#">Компания</a></li>
+         <li><a class="site-navigation-item" href="catalog.html">Каталог</a></li>
+         <li><a class="site-navigation-item" href="#">Новости</a></li>
+         <li><a class="site-navigation-item" href="#">Спецпредложения</a></li>
+         <li><a class="site-navigation-item" href="#">Доставка</a></li>
+         <li><a class="site-navigation-item" href="#">Контакты</a></li>
        </ul>
      </nav>
    </header>
 
    <main>
-     <section class="products container">
+     <section class="products container clearfix">
        <h2 class="visually-hidden title">Услуги</h2>
        <div class="product-item product-material new">
          <h3 class="title">Материалы</h3>
@@ -103,16 +103,16 @@
      </div>
      <ul class="card-list reset-list">
        <li class="card-item">
-         <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+         <a class="card-item-title" href="#">Перфоратор BOSCH BFG 9000</a>
          <a class="card-item-image" href="#">
-           <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+           <img src="img/perf_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
          <div class="card-item-action">
-           <a class="btn btn-buy" href="#">Купить</a>
-           <a class="btn btn-bookmark" href="#">В закладки</a>
+           <a class="buy" href="#">Купить</a>
+           <a class="bookmark" href="#">В закладки</a>
          </div>
-         <del class="discount">22500 Р.</del>
-         <p class="price">15500 Р.</p>
+         <del class="discount">32500 Р.</del>
+         <p class="price">25500 Р.</p>
        </li>
        <li class="card-item">
          <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
@@ -120,35 +120,35 @@
            <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
          <div class="card-item-action">
-           <a class="btn btn-buy" href="#">Купить</a>
-           <a class="btn btn-bookmark" href="#">В закладки</a>
+           <a class="buy" href="#">Купить</a>
+           <a class="bookmark" href="#">В закладки</a>
          </div>
          <del class="discount">22500 Р.</del>
          <p class="price">15500 Р.</p>
        </li>
        <li class="card-item">
-         <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+         <a class="card-item-title" href="#">Перфоратор BOSCH BFG 6000</a>
          <a class="card-item-image" href="#">
-           <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+           <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
          <div class="card-item-action">
-           <a class="btn btn-buy" href="#">Купить</a>
-           <a class="btn btn-bookmark" href="#">В закладки</a>
+           <a class="buy" href="#">Купить</a>
+           <a class="bookmark" href="#">В закладки</a>
          </div>
-         <del class="discount">22500 Р.</del>
-         <p class="price">15500 Р.</p>
+         <del class="discount">30500 Р.</del>
+         <p class="price">25500 Р.</p>
        </li>
        <li class="card-item new">
-         <a class="card-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+         <a class="card-item-title" href="#">Перфоратор BOSCH BFG 2000</a>
          <a class="card-item-image" href="#">
-           <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+           <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
          <div class="card-item-action">
-           <a class="btn btn-buy" href="#">Купить</a>
-           <a class="btn btn-bookmark" href="#">В закладки</a>
+           <a class="buy" href="#">Купить</a>
+           <a class="bookmark" href="#">В закладки</a>
          </div>
-         <del class="discount">22500 Р.</del>
-         <p class="price">15500 Р.</p>
+         <del class="discount"> </del>
+         <p class="price">12500 Р.</p>
        </li>
      </ul>
 
@@ -229,7 +229,7 @@
      <section class="contacts">
        <h2 class="title">Контакты</h2>
        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-       <a href="#" aria-label="Открыть карту">
+       <a class="contacts-image" href="#" aria-label="Открыть карту">
          <img src="img/map.jpg" width="300" height="158" alt="Карта">
        </a>
        <a class="btn btn-basic" href="#">Заблудились? Напишите нам!</a>
@@ -274,16 +274,19 @@
           <li class="social-item">
             <a class="social-btn social-btn-vk" href="#">
               <span class="visually-hidden">Вконтакте</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z" fill="#ffffff"></path></svg>
             </a>
           </li>
           <li class="social-item">
             <a class="social-btn social-btn-fb" href="#">
               <span class="visually-hidden">Фейсбук</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#ffffff"></path></svg>
             </a>
           </li>
           <li class="social-item">
             <a class="social-btn social-btn-insta" href="#">
               <span class="visually-hidden">Инстаграм</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z" fill="#ffffff"></path></svg>
             </a>
           </li>
         </ul>
@@ -292,7 +295,7 @@
            <a class="footer-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
          </p>
          <p class="develop">
-           Разработано:
+           Разработано —
            <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
          </p>
        </div>
