--- a/catalog.html
+++ b/catalog.html
@@ -88,7 +88,7 @@
                  <label for="filter-makita">Makita</label>
                </li>
                <li class="filter-option">
-                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="dewalt" id="filter-dewalt" disabled>
+                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="dewalt" id="filter-dewalt">
                  <label for="filter-dewalt">Dewalt</label>
                </li>
                <li class="filter-option">
