Работа над ошибками №001

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
        <div class="header-top-wrapper container">
          <a class="header-logo"><img src="img/icon/logo-technomart.svg" width="109" height="19" alt="Логотип магазина ТЕХНОМАРТ"></a>
          <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-          <label class="visually-hidden" for="header-search">Поиск</label>
           <input type="search" class="search-input" value="Поиск:" id="header-search">
+          <label for="header-search"><span class="visually-hidden">Поиск</span></label>
          </form>
          <ul class="header-list reset-list">
            <li><a class="header-list-item header-list-bookmark" href="#">Закладки: <span>0</span></a></li>
@@ -71,8 +71,8 @@
            <label for="slid-1">1</label>
            <label for="slid-2">2</label>
          </div>
-         <a class="slider-btn  slider-btn-prev" href="#"><span class="visually-hidden">Назад</span></a>
-         <a class="slider-btn  slider-btn-next" href="#"><span class="visually-hidden">Вперед</span></a>
+         <a class="slider-btn slider-btn-prev" href="#"><span class="visually-hidden">Назад</span></a>
+         <a class="slider-btn slider-btn-next" href="#"><span class="visually-hidden">Вперед</span></a>
          <div class="slider-item-1">
            <h3 class="title">Дрели</h3>
            <p>Соседям на радость!</p>
@@ -87,11 +87,11 @@
 
        <div class="product-item product-discount">
          <h3 class="title">Скидки 50%</h3>
-         <a class="btn  btn-product" href="#">На 350 товаров</a>
+         <a class="btn btn-product" href="#">На 350 товаров</a>
        </div>
        <div class="product-item product-delivery">
          <h3 class="title">Доставка</h3>
-         <a class="btn  btn-product" href="#">Бесплатно</a>
+         <a class="btn btn-product" href="#">Бесплатно</a>
        </div>
 
    </section>
@@ -108,8 +108,8 @@
            <img src="img/perf_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
          <div class="card-item-action">
-           <a class="buy" href="#">Купить</a>
-           <a class="bookmark" href="#">В закладки</a>
+           <a class="btn-buy" href="#">Купить</a>
+           <a class="btn-bookmark" href="#">В закладки</a>
          </div>
          <del class="discount">32500 Р.</del>
          <p class="price">25500 Р.</p>
@@ -120,8 +120,8 @@
            <img src="img/perf_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
          <div class="card-item-action">
-           <a class="buy" href="#">Купить</a>
-           <a class="bookmark" href="#">В закладки</a>
+           <a class="btn-buy" href="#">Купить</a>
+           <a class="btn-bookmark" href="#">В закладки</a>
          </div>
          <del class="discount">22500 Р.</del>
          <p class="price">15500 Р.</p>
@@ -132,8 +132,8 @@
            <img src="img/perf_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
          <div class="card-item-action">
-           <a class="buy" href="#">Купить</a>
-           <a class="bookmark" href="#">В закладки</a>
+           <a class="btn-buy" href="#">Купить</a>
+           <a class="btn-bookmark" href="#">В закладки</a>
          </div>
          <del class="discount">30500 Р.</del>
          <p class="price">25500 Р.</p>
@@ -144,8 +144,8 @@
            <img src="img/perf_4.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
          </a>
          <div class="card-item-action">
-           <a class="buy" href="#">Купить</a>
-           <a class="bookmark" href="#">В закладки</a>
+           <a class="btn-buy" href="#">Купить</a>
+           <a class="btn-bookmark" href="#">В закладки</a>
          </div>
          <del class="discount"> </del>
          <p class="price">12500 Р.</p>
@@ -199,7 +199,7 @@
           </div>
           <div class="service-item service-item-2">
             <h3 class="title">Гарантия</h3>
-            <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. </p><!--Вопрос о использовании br-->
+            <p>Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. </p><!--Вопрос о использовании br-->
             <p>Дом уж восстановите как-нибудь сами.</p>
           </div>
           <div class="service-item service-item-3">
@@ -323,7 +323,7 @@
         <button class="btn btn-basic" type="submit">Отправить</button>
       </div>
     </form>
-    <button class="visually-hidden modal-close" aria-label="Закрыть модальное окно">Закрыть</button>
+    <button class="modal-close" aria-label="Закрыть модальное окно"></button>
   </section>
 
   <section class="modal modal-map">
@@ -331,7 +331,7 @@
       Как до нас добраться
     </h2>
     <img src="img/big-map.jpg" width="940" height="446" alt="Офис компании по адресу Большая Конюшенная 19/8, Санкт-Петербург">
-    <button class="visually-hidden modal-close" aria-label="Закрыть модальное окно">Закрыть</button>
+    <button class="modal-close" aria-label="Закрыть модальное окно"></button>
   </section>
 
   </body>
