декоративные элементы личного проекта

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
          <input class="visually-hidden" type="radio" id="slid-1" name="product-slider" checked>
          <input class="visually-hidden" type="radio" id="slid-2" name="product-slider">
          <div class="product-slider-label">
-           <label for="slid-1">1</label>
-           <label for="slid-2">2</label>
+           <label for="slid-1"></label>
+           <label for="slid-2"></label>
          </div>
          <a class="slider-btn slider-btn-prev" href="#"><span class="visually-hidden">Назад</span></a>
          <a class="slider-btn slider-btn-next" href="#"><span class="visually-hidden">Вперед</span></a>
@@ -147,7 +147,6 @@
            <a class="btn-buy" href="#">Купить</a>
            <a class="btn-bookmark" href="#">В закладки</a>
          </div>
-         <del class="discount"> </del>
          <p class="price">12500 Р.</p>
        </li>
      </ul>
