Работа над ошибками

--- a/catalog.html
+++ b/catalog.html
@@ -130,7 +130,7 @@
          <h3 class="visually-hidden">Список инструментов</h3>
          <section class="sorting">
            <h4 class="sorting-title">Сортировка:</h4>
-           <div class="sorting-atribut">
+           <div class="sorting-mark">
              <a class="sorting-active" href="#">По цене</a>
              <a href="#">По типу</a>
              <a href="#">По функционалу</a>
