Работа над ошибками 002

--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
        <a class="btn btn-basic" href="#">Все производители</a>
      </div>
      <div class="brand-list">
-       <a class="brand-item" href=""><img src="img/brand-bosch.jpg" alt="Bosch"></a>
-       <a class="brand-item" href=""><img src="img/brand-makita.jpg" alt="makita"></a>
-       <a class="brand-item" href=""><img src="img/brand-dewalt.jpg" alt="dewalt"></a>
-       <a class="brand-item" href=""><img src="img/brand-interscol.jpg" alt="интерскол"></a>
-       <a class="brand-item" href=""><img src="img/brand-hitachi.jpg" alt="hitachi"></a>
-       <a class="brand-item" href=""><img src="img/brand-lg.jpg" alt="lg"></a>
-       <a class="brand-item" href=""><img src="img/brand-aeg.jpg" alt="aeg"></a>
-       <a class="brand-item" href=""><img src="img/brand-metabo.jpg" alt="metabo"></a>
+       <a class="brand-item" href="#"><img src="img/brand-bosch.jpg" alt="Bosch"></a>
+       <a class="brand-item" href="#"><img src="img/brand-makita.jpg" alt="makita"></a>
+       <a class="brand-item" href="#"><img src="img/brand-dewalt.jpg" alt="dewalt"></a>
+       <a class="brand-item" href="#"><img src="img/brand-interscol.jpg" alt="интерскол"></a>
+       <a class="brand-item" href="#"><img src="img/brand-hitachi.jpg" alt="hitachi"></a>
+       <a class="brand-item" href="#"><img src="img/brand-lg.jpg" alt="lg"></a>
+       <a class="brand-item" href="#"><img src="img/brand-aeg.jpg" alt="aeg"></a>
+       <a class="brand-item" href="#"><img src="img/brand-metabo.jpg" alt="metabo"></a>
      </div>
    </section>
 
