Работа над ошибками 004

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <div class="header-content container">
        <h1 class="header-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
        <address class="header-contacts">
-         <a class="header-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a><br>
+         <a class="header-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
        </address>
        <ul class="auth reset-list">
